Add 'Torneios' link to navigation menu

--- a/Matches Tracker/templates/base.html
+++ b/Matches Tracker/templates/base.html
@@ -16,6 +16,7 @@
                 <li><a href="/proximas">Próximas</a></li>
                 <li><a href="/ao-vivo">Ao Vivo</a></li>
                 <li><a href="/passadas">Resultados</a></li>
+                <li><a href="/torneios">Torneios</a></li>
             </ul>
         </div>
     </nav>
