--- a/templates/base.html
+++ b/templates/base.html
@@ -27,9 +27,11 @@
 
     <footer class="footer">
         <div class="container">
+            <br>
             <p>&copy; 2026 Esports Tracker - Dados via PandaScore API</p>
         </div>
     </footer>
 
+    <script src="{{ url_for('static', filename='js/search-teams.js') }}"></script>
 </body>
 </html>
