--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
         <div class="brand-text">
             <span class="badge-dev">Back-End Developer</span>
             <h1>Olá, eu sou o <span class="name-highlight">Aquinozz</span></h1>
-            <p>Desenvolvedor focado em performance e APIs. Este projeto integra dados reais de E-sports com uma interface moderna e responsiva.</p>
+            <p>Desenvolvedor focado em performance e APIs. Este projeto integra dados reais de Counter-Strike 2 com uma interface moderna e responsiva.</p>
             
             <div class="action-buttons">
                 <a href="https://github.com/Aquinozz" target="_blank" class="btn-primary">
@@ -80,4 +80,5 @@
     </section>
 
 </div>
+
 {% endblock %}
